Fixed the header overlapping modals Added hover css to the text links

--- a/src/resources/stylesheets/inputs.scss
+++ b/src/resources/stylesheets/inputs.scss
@@ -13,14 +13,14 @@
 }
 
 .input-container {
-  margin-bottom: 0.2rem;
-
   &.invalid {
     flex-flow: column;
 
     &::after {
+      top: 100%;
       font-size: 1.1rem;
       padding: 0.2rem;
+      position: absolute;
     }
   }
 
