--- a/src/widgets/user/login/style.scss
+++ b/src/widgets/user/login/style.scss
@@ -27,7 +27,8 @@ dialog {
       height: auto;
 
       div.input-container {
-        height: $input-height + 2rem;
+        margin-bottom: 2rem;
+        min-height: $input-height;
         position: relative;
 
         input {
@@ -152,14 +153,36 @@ dialog {
       .forgot-password {
         color: $primary-base;
         cursor: pointer;
+        display: inline-block;
         font-size: 1.3rem;
         font-weight: bold;
-        margin-bottom: 3rem;
-        margin-top: -0.75rem;
+        margin-bottom: 2rem;
         padding-left: 0.2rem;
+        position: relative;
+        transition: color 300ms ease;
 
         &:focus {
           text-decoration: underline;
+        }
+
+        &::before {
+          background-color: $primary-base;
+          content: '';
+          height: 1px;
+          left: 50%;
+          position: absolute;
+          top: 100%;
+          transform: translateX(-50%);
+          transition: width 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+          width: 0;
+        }
+
+        &:hover {
+          color: lighten($primary-base, 10%);
+
+          &::before {
+            width: 100%;
+          }
         }
       }
 
@@ -185,9 +208,29 @@ dialog {
 
         span {
           color: $primary-base;
+          position: relative;
+          transition: color 300ms ease;
 
-          &:hover {
-            color: orange;
+          &::before {
+            background-color: $primary-base;
+            content: '';
+            height: 1px;
+            left: 50%;
+            position: absolute;
+            top: 100%;
+            transform: translateX(-50%);
+            transition: width 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+            width: 0;
+          }
+        }
+
+        &:hover {
+          span {
+            color: lighten($primary-base, 10%);
+
+            &::before {
+              width: 100%;
+            }
           }
         }
       }
